syntax = "proto3";

package executor_interface;

// Arguments for the ExecuteQuery RPC.
message ExecuteQueryArgs {
    // The query fragment identifier.
    int32 fragment_id = 1;

    // The physical plan for the query.
    bytes physical_plan = 2;

    // Build a hash table with the results.
    bool build_hash_table = 3;
}

message ExecuteQueryRet {
}

service ExecutorService {
    rpc ExecuteQuery(ExecuteQueryArgs) returns (ExecuteQueryRet);
}
